slight css change to fix login button visibility attempt 2

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -54,7 +54,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #b02f94;
   cursor: pointer;
   transition: border-color 0.25s;
 }
